log in and out func up and running

--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -35,7 +35,7 @@
 <!-- <div class="color-line"></div> -->
 
 <div class="back-link">
-    <a href="/" class="btn btn-primary">Back to Dashboard</a>
+    <a href="/" class="btn btn-primary">Back</a>
 </div>
 <div class="register-container">
     <div class="row">
@@ -46,27 +46,27 @@
             </div>
             <div class="hpanel">
                 <div class="panel-body">
-                        <form action="#" id="loginForm">
+                        <form action="/auth/register" id="loginForm" method="POST">
                             <div class="row">
                             <div class="form-group col-lg-12">
                                 <label>Username</label>
-                                <input type="" value="" id="" class="form-control" name="">
+                                <input type="" value="" id="" class="form-control" name="username" required>
                             </div>
                             <div class="form-group col-lg-6">
-                                <label>Password</label>
-                                <input type="password" value="" id="" class="form-control" name="">
+                                <label>First Name</label>
+                                <input type="" value="" id="" class="form-control" name="first_name" required>
                             </div>
                             <div class="form-group col-lg-6">
-                                <label>Repeat Password</label>
-                                <input type="password" value="" id="" class="form-control" name="">
+                                <label>Last Name</label>
+                                <input type="" value="" id="" class="form-control" name="last_name" required>
                             </div>
                             <div class="form-group col-lg-6">
                                 <label>Email Address</label>
-                                <input type="" value="" id="" class="form-control" name="">
+                                <input type="" value="" id="" class="form-control" name="email" required>
                             </div>
                             <div class="form-group col-lg-6">
-                                <label>Repeat Email Address</label>
-                                <input type="" value="" id="" class="form-control" name="">
+                                <label>Password</label>
+                                <input type="password" value="" id="" class="form-control" name="password" required>
                             </div>
                             <div class="checkbox col-lg-12">
                                 <input type="checkbox" class="i-checks" checked>
@@ -75,7 +75,6 @@
                             </div>
                             <div class="text-center">
                                 <button class="btn btn-success">Register</button>
-                                <button class="btn btn-default">Cancel</button>
                             </div>
                         </form>
                 </div>
