--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -35,7 +35,7 @@
 <!-- <div class="color-line"></div> -->
 
 <div class="back-link">
-    <a href="/" class="btn btn-primary">Back to Dashboard</a>
+    <a href="/" class="btn btn-primary">Back</a>
 </div>
 
 <div class="login-container">
@@ -47,15 +47,15 @@
             </div>
             <div class="hpanel">
                 <div class="panel-body">
-                        <form action="#" id="loginForm">
+                        <form action="/auth/login" id="loginForm" method="POST">
                             <div class="form-group">
                                 <label class="control-label" for="username">Username</label>
-                                <input type="text" placeholder="example@gmail.com" title="Please enter you username" required="" value="" name="username" id="username" class="form-control">
+                                <input type="text" title="Please enter you username" required value="" name="username" id="username" class="form-control">
                                 <span class="help-block small">Your unique username to app</span>
                             </div>
                             <div class="form-group">
                                 <label class="control-label" for="password">Password</label>
-                                <input type="password" title="Please enter your password" placeholder="******" required="" value="" name="password" id="password" class="form-control">
+                                <input type="password" title="Please enter your password" required value="" name="password" id="password" class="form-control">
                                 <span class="help-block small">Yur strong password</span>
                             </div>
                             <div class="checkbox">
