--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -7,32 +7,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- Page title -->
-    <title>HOMER | WebApp admin theme</title>
+    <title>HOMER | WebApp admin </title>
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!--<link rel="shortcut icon" type="image/ico" href="favicon.ico" />-->
 
     <!-- Vendor styles -->
-    <link rel="stylesheet" href="vendor/fontawesome/css/font-awesome.css" />
-    <link rel="stylesheet" href="vendor/metisMenu/dist/metisMenu.css" />
-    <link rel="stylesheet" href="vendor/animate.css/animate.css" />
-    <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="../stylesheets/vendor/fontawesome/css/font-awesome.css" />
+    <link rel="stylesheet" href="../stylesheets/vendor/metisMenu/dist/metisMenu.css" />
+    <link rel="stylesheet" href="../stylesheets/vendor/animate.css/animate.css" />
+    <link rel="stylesheet" href="../stylesheets/vendor/bootstrap/dist/css/bootstrap.css" />
 
     <!-- App styles -->
-    <link rel="stylesheet" href="fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css" />
-    <link rel="stylesheet" href="fonts/pe-icon-7-stroke/css/helper.css" />
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="../stylesheets/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css" />
+    <link rel="stylesheet" href="../stylesheets/fonts/pe-icon-7-stroke/css/helper.css" />
+    <link rel="stylesheet" href="../stylesheets/styles/style.css">
 
 </head>
 <body class="fixed-navbar sidebar-scroll">
 
 <!-- Skin option / for demo purpose only -->
-<div class="skin-option animated fadeInRight">
+<!-- <div class="skin-option animated fadeInRight">
     <a href="/light-shadow/" target="_blank">
         <small class="font-bold text-muted"><i id="demo-star" class="fa fa-star"></i> New <span class="text-success"> Light-Shadow</span><br/>Skin for Homer 2.0</small>
-        <img class="img-responsive m-t-xs" src="images/light-skin.png"/>
+        <img class="img-responsive m-t-xs" src="../images/light-skin.png"/>
     </a>
-</div>
+</div> -->
 <style>
     .skin-option { position: fixed; text-align: center; right: -1px; padding: 10px; top: 80px; width: 150px; height: 133px; text-transform: uppercase; background-color: #ffffff; box-shadow: 0 1px 10px rgba(0, 0, 0, 0.05), 0 1px 4px rgba(0, 0, 0, .1); border-radius: 4px 0 0 4px; z-index: 100; }
 </style>
@@ -43,7 +43,7 @@
 
 <!-- Header -->
 <div id="header">
-    <!-- <div class="color-line"> -->
+    <div class="color-line">
     </div>
     <div id="logo" class="light-version">
         <span>
@@ -207,22 +207,22 @@
     <div id="navigation">
         <div class="profile-picture">
             <a href="index.html">
-                <img src="images/profile.jpg" class="img-circle m-b" alt="logo">
+                <img src="<%=user.avatar%>" height="70" width="70" class="img-circle m-b" alt="logo">
             </a>
 
             <div class="stats-label text-color">
-                <span class="font-extra-bold font-uppercase">Robert Razer</span>
+                <span class="font-extra-bold font-uppercase"><%=user.first_name%> <%=user.last_name%></span>
 
                 <div class="dropdown">
                     <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                        <small class="text-muted">Founder of App <b class="caret"></b></small>
+                        <small class="text-muted"> Super Admin <b class="caret"></b></small>
                     </a>
                     <ul class="dropdown-menu animated flipInX m-t-xs">
                         <li><a href="contacts.html">Contacts</a></li>
                         <li><a href="profile.html">Profile</a></li>
                         <li><a href="analytics.html">Analytics</a></li>
                         <li class="divider"></li>
-                        <li><a href="login.html">Logout</a></li>
+                        <li><a href="/logout">Logout</a></li>
                     </ul>
                 </div>
 
@@ -775,7 +775,7 @@
                 <div class="social-talk">
                     <div class="media social-profile clearfix">
                         <a class="pull-left">
-                            <img src="images/a1.jpg" alt="profile-picture">
+                            <img src="../images/a1.jpg" alt="profile-picture">
                         </a>
 
                         <div class="media-body">
@@ -790,7 +790,7 @@
                 <div class="social-talk">
                     <div class="media social-profile clearfix">
                         <a class="pull-left">
-                            <img src="images/a3.jpg" alt="profile-picture">
+                            <img src="../images/a3.jpg" alt="profile-picture">
                         </a>
 
                         <div class="media-body">
@@ -805,7 +805,7 @@
                 <div class="social-talk">
                     <div class="media social-profile clearfix">
                         <a class="pull-left">
-                            <img src="images/a4.jpg" alt="profile-picture">
+                            <img src="../images/a4.jpg" alt="profile-picture">
                         </a>
 
                         <div class="media-body">
@@ -861,24 +861,25 @@
 
 </div>
 
+
 <!-- Vendor scripts -->
-<script src="vendor/jquery/dist/jquery.min.js"></script>
-<script src="vendor/jquery-ui/jquery-ui.min.js"></script>
-<script src="vendor/slimScroll/jquery.slimscroll.min.js"></script>
-<script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="vendor/jquery-flot/jquery.flot.js"></script>
-<script src="vendor/jquery-flot/jquery.flot.resize.js"></script>
-<script src="vendor/jquery-flot/jquery.flot.pie.js"></script>
-<script src="vendor/flot.curvedlines/curvedLines.js"></script>
-<script src="vendor/jquery.flot.spline/index.js"></script>
-<script src="vendor/metisMenu/dist/metisMenu.min.js"></script>
-<script src="vendor/iCheck/icheck.min.js"></script>
-<script src="vendor/peity/jquery.peity.min.js"></script>
-<script src="vendor/sparkline/index.js"></script>
+<script src="../stylesheets/vendor/jquery/dist/jquery.min.js"></script>
+<script src="../stylesheets/vendor/jquery-ui/jquery-ui.min.js"></script>
+<script src="../stylesheets/vendor/slimScroll/jquery.slimscroll.min.js"></script>
+<script src="../stylesheets/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="../stylesheets/vendor/jquery-flot/jquery.flot.js"></script>
+<script src="../stylesheets/vendor/jquery-flot/jquery.flot.resize.js"></script>
+<script src="../stylesheets/vendor/jquery-flot/jquery.flot.pie.js"></script>
+<script src="../stylesheets/vendor/flot.curvedlines/curvedLines.js"></script>
+<script src="../stylesheets/vendor/jquery.flot.spline/index.js"></script>
+<script src="../stylesheets/vendor/metisMenu/dist/metisMenu.min.js"></script>
+<script src="../stylesheets/vendor/iCheck/icheck.min.js"></script>
+<script src="../stylesheets/vendor/peity/jquery.peity.min.js"></script>
+<script src="../stylesheets/vendor/sparkline/index.js"></script>
 
 <!-- App scripts -->
-<script src="scripts/homer.js"></script>
-<script src="scripts/charts.js"></script>
+<script src="../javascripts/homer.js"></script>
+<script src="../javascripts/charts.js"></script>
 
 <script>
 
