--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -70,7 +70,7 @@
                         <a class="" href="login.html">Login</a>
                     </li>
                     <li>
-                        <a class="" href="login.html">Logout</a>
+                        <a class="" href="/auth/logout">Logout</a>
                     </li>
                     <li>
                         <a class="" href="profile.html">Profile</a>
@@ -222,7 +222,7 @@
                         <li><a href="profile.html">Profile</a></li>
                         <li><a href="analytics.html">Analytics</a></li>
                         <li class="divider"></li>
-                        <li><a href="/logout">Logout</a></li>
+                        <li><a href="/auth/logout">Logout</a></li>
                     </ul>
                 </div>
 
