--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -193,7 +193,7 @@
                     </a>
                 </li>
                 <li class="dropdown">
-                    <a href="login.html">
+                    <a href="/auth/logout">
                         <i class="pe-7s-upload pe-rotate-90"></i>
                     </a>
                 </li>
