--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- Page title -->
-    <title>HOMER | WebApp admin </title>
+    <title>The ReFactory</title>
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!--<link rel="shortcut icon" type="image/ico" href="favicon.ico" />-->
@@ -47,7 +47,7 @@
     </div>
     <div id="logo" class="light-version">
         <span>
-            Homer Theme
+            The_ReFactory
         </span>
     </div>
     <nav role="navigation">
@@ -57,7 +57,7 @@
         </div>
         <form role="search" class="navbar-form-custom" method="post" action="#">
             <div class="form-group">
-                <input type="text" placeholder="Search something special" class="form-control" name="search">
+                <input type="text" placeholder="Search" class="form-control" name="search">
             </div>
         </form>
         <div class="mobile-menu">
@@ -367,12 +367,11 @@
         <div class="row">
             <div class="col-lg-12 text-center welcome-message">
                 <h2>
-                    Welcome to Homer Theme
+                    Welcome to The_ReFactory
                 </h2>
 
                 <p>
-                    Special <strong>Admin Theme</strong> for medium and large web applications with very clean and
-                    aesthetic style and feel.
+                    Where data and analytics drive results for your migrations.
                 </p>
             </div>
         </div>
@@ -775,7 +774,7 @@
                 <div class="social-talk">
                     <div class="media social-profile clearfix">
                         <a class="pull-left">
-                            <img src="../images/a1.jpg" alt="profile-picture">
+                            <img src="../images/a7.jpg" alt="profile-picture">
                         </a>
 
                         <div class="media-body">
@@ -790,7 +789,7 @@
                 <div class="social-talk">
                     <div class="media social-profile clearfix">
                         <a class="pull-left">
-                            <img src="../images/a3.jpg" alt="profile-picture">
+                            <img src="../images/a8.jpg" alt="profile-picture">
                         </a>
 
                         <div class="media-body">
@@ -805,7 +804,7 @@
                 <div class="social-talk">
                     <div class="media social-profile clearfix">
                         <a class="pull-left">
-                            <img src="../images/a4.jpg" alt="profile-picture">
+                            <img src="../images/a9.jpg" alt="profile-picture">
                         </a>
 
                         <div class="media-body">
@@ -854,9 +853,9 @@
     <!-- Footer-->
     <footer class="footer">
         <span class="pull-right">
-            Example text
+            The_ReFactory
         </span>
-        Company 2015-2020
+        Deloitte @2017
     </footer>
 
 </div>
