--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -215,12 +215,11 @@
 
                 <div class="dropdown">
                     <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                        <small class="text-muted"> Super Admin <b class="caret"></b></small>
+                        <small class="text-muted"> Super-Admin: <%=user.super_admin%> <b class="caret"></b></small>
                     </a>
                     <ul class="dropdown-menu animated flipInX m-t-xs">
-                        <li><a href="contacts.html">Contacts</a></li>
-                        <li><a href="profile.html">Profile</a></li>
-                        <li><a href="analytics.html">Analytics</a></li>
+                        <li><a href="/users/<%=user.id%>/edit">Profile</a></li>
+                        <li><a href="/analytics">Analytics</a></li>
                         <li class="divider"></li>
                         <li><a href="/auth/logout">Logout</a></li>
                     </ul>
