--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -78,7 +78,7 @@
                             </div>
                             </div>
                             <div class="text-center">
-                                <button class="btn btn-success">Register</button>
+                                <button class="btn btn-success">Edit Profile</button>
                             </div>
                         </form>
                 </div>
