--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -1,347 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
+<% include partials/header %>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-    <!-- Page title -->
-    <title>The ReFactory</title>
-
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!--<link rel="shortcut icon" type="image/ico" href="favicon.ico" />-->
-
-    <!-- Vendor styles -->
-    <link rel="stylesheet" href="../stylesheets/vendor/fontawesome/css/font-awesome.css" />
-    <link rel="stylesheet" href="../stylesheets/vendor/metisMenu/dist/metisMenu.css" />
-    <link rel="stylesheet" href="../stylesheets/vendor/animate.css/animate.css" />
-    <link rel="stylesheet" href="../stylesheets/vendor/bootstrap/dist/css/bootstrap.css" />
-
-    <!-- App styles -->
-    <link rel="stylesheet" href="../stylesheets/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css" />
-    <link rel="stylesheet" href="../stylesheets/fonts/pe-icon-7-stroke/css/helper.css" />
-    <link rel="stylesheet" href="../stylesheets/styles/style.css">
-
-</head>
-<body class="fixed-navbar sidebar-scroll">
-
-<!-- Skin option / for demo purpose only -->
-<!-- <div class="skin-option animated fadeInRight">
-    <a href="/light-shadow/" target="_blank">
-        <small class="font-bold text-muted"><i id="demo-star" class="fa fa-star"></i> New <span class="text-success"> Light-Shadow</span><br/>Skin for Homer 2.0</small>
-        <img class="img-responsive m-t-xs" src="../images/light-skin.png"/>
-    </a>
-</div> -->
-<style>
-    .skin-option { position: fixed; text-align: center; right: -1px; padding: 10px; top: 80px; width: 150px; height: 133px; text-transform: uppercase; background-color: #ffffff; box-shadow: 0 1px 10px rgba(0, 0, 0, 0.05), 0 1px 4px rgba(0, 0, 0, .1); border-radius: 4px 0 0 4px; z-index: 100; }
-</style>
-<script>
-    setInterval(function(){ $('#demo-star').toggleClass('text-success'); }, 300)
-</script>
-<!-- End skin option / for demo purpose only -->
-
-<!-- Header -->
-<div id="header">
-    <div class="color-line">
-    </div>
-    <div id="logo" class="light-version">
-        <span>
-            The_ReFactory
-        </span>
-    </div>
-    <nav role="navigation">
-        <div class="header-link hide-menu"><i class="fa fa-bars"></i></div>
-        <div class="small-logo">
-            <span class="text-primary"> The_ReFactory</span>
-        </div>
-        <form role="search" class="navbar-form-custom" method="post" action="#">
-            <div class="form-group">
-                <input type="text" placeholder="Search" class="form-control" name="search">
-            </div>
-        </form>
-        <div class="mobile-menu">
-            <button type="button" class="navbar-toggle mobile-menu-toggle" data-toggle="collapse" data-target="#mobile-collapse">
-                <i class="fa fa-chevron-down"></i>
-            </button>
-            <div class="collapse mobile-navbar" id="mobile-collapse">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a class="" href="/auth/login">Login</a>
-                    </li>
-                    <li>
-                        <a class="" href="/auth/logout">Logout</a>
-                    </li>
-                    <li>
-                        <a class="" href="/users/<%=user.id%>/edit">Profile</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="navbar-right">
-            <ul class="nav navbar-nav no-borders">
-                <li class="dropdown">
-                    <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                        <i class="pe-7s-speaker"></i>
-                    </a>
-                    <ul class="dropdown-menu hdropdown notification animated flipInX">
-                        <li>
-                            You have 0 new notifications
-                        </li>
-                        <li class="summary"><a href="#">See all notifications</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                        <i class="pe-7s-keypad"></i>
-                    </a>
-
-                    <div class="dropdown-menu hdropdown bigmenu animated flipInX">
-                        <table>
-                            <tbody>
-                            <tr>
-                                <td>
-                                    <a href="/users/<%=user.id%>">
-                                        <i class="pe pe-7s-portfolio text-info"></i>
-                                        <h5>Dashboard</h5>
-                                    </a>
-                                </td>
-                                <td>
-                                    <a href="/messages/<%=user.id%>">
-                                        <i class="pe pe-7s-mail text-warning"></i>
-                                        <h5>Messages</h5>
-                                    </a>
-                                </td>
-                                <td>
-                                    <a href="/projects/<%=user.id%>">
-                                        <i class="pe pe-7s-users text-success"></i>
-                                        <h5>Projects</h5>
-                                    </a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <a href="/notifications/<%=user.id%>">
-                                        <i class="pe pe-7s-comment text-info"></i>
-                                        <h5>Notifications</h5>
-                                    </a>
-                                </td>
-                                <td>
-                                    <a href="/analytics/<%=user.id%>">
-                                        <i class="pe pe-7s-graph1 text-danger"></i>
-                                        <h5>Analytics</h5>
-                                    </a>
-                                </td>
-                                <td>
-                                    <a href="/files/<%=user.id%>">
-                                        <i class="pe pe-7s-box1 text-success"></i>
-                                        <h5>Files</h5>
-                                    </a>
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle label-menu-corner" href="#" data-toggle="dropdown">
-                        <i class="pe-7s-mail"></i>
-                        <span class="label label-success"></span>
-                    </a>
-                    <ul class="dropdown-menu hdropdown animated flipInX">
-                        <div class="title">
-                            You have 0 new messages
-                        </div>
-                        <!-- <li>
-                            <a>
-                            </a>
-                        </li> -->
-                        <li class="summary"><a href="#">See All Messages</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#" id="sidebar" class="right-sidebar-toggle">
-                        <i class="pe-7s-upload pe-7s-news-paper"></i>
-                    </a>
-                </li>
-                <li class="dropdown">
-                    <a href="/auth/logout">
-                        <i class="pe-7s-upload pe-rotate-90"></i>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-</div>
-
-<!-- Navigation -->
-<aside id="menu">
-    <div id="navigation">
-        <div class="profile-picture">
-            <a href="index.html">
-                <img src="<%=user.avatar%>" height="70" width="70" class="img-circle m-b" alt="logo">
-            </a>
-
-            <div class="stats-label text-color">
-                <span class="font-extra-bold font-uppercase"><%=user.first_name%> <%=user.last_name%></span>
-
-                <div class="dropdown">
-                    <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                        <small class="text-muted"> Super-Admin: <%=user.super_admin%> <b class="caret"></b></small>
-                    </a>
-                    <ul class="dropdown-menu animated flipInX m-t-xs">
-                        <li><a href="/users/<%=user.id%>/edit">Profile</a></li>
-                        <li><a href="/projects">Mange Project</a></li>
-                        <li class="divider"></li>
-                        <li><a href="/auth/logout">Logout</a></li>
-                    </ul>
-                </div>
-
-
-                <div id="sparkline1" class="small-chart m-t-sm"></div>
-                <div>
-                    <h4 class="font-extra-bold m-b-xs">
-                        1749 / 2000
-                    </h4>
-                    <small class="text-muted">Total code quality diagnostics over time</small>
-                </div>
-            </div>
-        </div>
-
-        <ul class="nav" id="side-menu">
-            <li class="active">
-                <a href="/users/<%=user.id%>"> <span class="nav-label">Dashboard</span> </a>
-            </li>
-            <li>
-                <a href="/analytics/<%=user.id%>"> <span class="nav-label">Analytics</span> </a>
-            </li>
-            <li>
-                <a href="/projects/<%=user.id%>"> <span class="nav-label">Projects</span> </a>
-            </li>
-            <li>
-                <a href="/messages/<%=user.id%>"> <span class="nav-label">Messages</span> </a>
-            </li>
-            <li>
-                <a href="/notifications/<%=user.id%>"> <span class="nav-label">Notifications</span> </a>
-            </li>
-            <li>
-                <a href="/files/<%=user.id%>"> <span class="nav-label">Files</span> </a>
-            </li>
-            <!-- <li>
-                <a href="#"><span class="nav-label">Interface</span><span class="fa arrow"></span> </a>
-                <ul class="nav nav-second-level">
-                    <li><a href="panels.html">Panels design</a></li>
-                    <li><a href="typography.html">Typography</a></li>
-                    <li><a href="buttons.html">Colors &amp; Buttons</a></li>
-                    <li><a href="components.html">Components</a></li>
-                    <li><a href="alerts.html">Alerts</a></li>
-                    <li><a href="modals.html">Modals</a></li>
-                    <li><a href="loading_buttons.html">Loading buttons</a></li>
-                    <li><a href="draggable.html">Draggable panels</a></li>
-                    <li><a href="code_editor.html">Code editor</a></li>
-                    <li><a href="email_template.html">Email template</a></li>
-                    <li><a href="nestable_list.html">List</a></li>
-                    <li><a href="tour.html">Tour</a></li>
-                    <li><a href="icons.html">Icons library</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="#"><span class="nav-label">App views</span><span class="fa arrow"></span> </a>
-                <ul class="nav nav-second-level">
-                    <li><a href="contacts.html">Contacts</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="project.html">Project detail</a></li>
-                    <li><a href="app_plans.html">App plans</a></li>
-                    <li><a href="social_board.html">Social board</a></li>
-                    <li><a href="faq.html">FAQ</a></li>
-                    <li><a href="timeline.html">Timeline</a></li>
-                    <li><a href="notes.html">Notes</a></li>
-                    <li><a href="profile.html">Profile</a></li>
-                    <li><a href="mailbox.html">Mailbox</a></li>
-                    <li><a href="mailbox_compose.html">Email compose</a></li>
-                    <li><a href="mailbox_view.html">Email view</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="blog_details.html">Blog article</a></li>
-                    <li><a href="forum.html">Forum</a></li>
-                    <li><a href="forum_details.html">Forum details</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="calendar.html">Calendar</a></li>
-                    <li><a href="invoice.html">Invoice</a></li>
-                    <li><a href="file_manager.html">File manager</a></li>
-                    <li><a href="chat_view.html">Chat view</a></li>
-                    <li><a href="search.html">Search view</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="#"><span class="nav-label">Charts</span><span class="fa arrow"></span> </a>
-                <ul class="nav nav-second-level">
-                    <li><a href="chartjs.html">ChartJs</a></li>
-                    <li><a href="flot.html">Flot charts</a></li>
-                    <li><a href="inline.html">Inline graphs</a></li>
-                    <li><a href="chartist.html">Chartist</a></li>
-                    <li><a href="c3.html">C3 Charts</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="#"><span class="nav-label">Box transitions</span><span class="fa arrow"></span> </a>
-                <ul class="nav nav-second-level">
-                    <li><a href="overview.html"><span class="label label-success pull-right">Start</span> Overview </a>  </li>
-                    <li><a href="transition_two.html">Columns from up</a></li>
-                    <li><a href="transition_one.html">Columns custom</a></li>
-                    <li><a href="transition_three.html">Panels zoom</a></li>
-                    <li><a href="transition_four.html">Rows from down</a></li>
-                    <li><a href="transition_five.html">Rows from right</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="#"><span class="nav-label">Common views</span><span class="fa arrow"></span> </a>
-                <ul class="nav nav-second-level">
-                    <li><a href="login.html">Login</a></li>
-                    <li><a href="register.html">Register</a></li>
-                    <li><a href="error_one.html">Error 404</a></li>
-                    <li><a href="error_two.html">Error 505</a></li>
-                    <li><a href="lock.html">Lock screen</a></li>
-                    <li><a href="password_recovery.html">Passwor recovery</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="#"><span class="nav-label">Tables</span><span class="fa arrow"></span> </a>
-                <ul class="nav nav-second-level">
-                    <li><a href="tables_design.html">Tables design</a></li>
-                    <li><a href="datatables.html">Data tables</a></li>
-                    <li><a href="footable.html">Foo Table</a></li>
-
-                </ul>
-            </li>
-            <li>
-                <a href="widgets.html"> <span class="nav-label">Widgets</span> <span class="label label-success pull-right">Special</span></a>
-            </li>
-            <li>
-                <a href="#"><span class="nav-label">Forms</span><span class="fa arrow"></span> </a>
-                <ul class="nav nav-second-level">
-                    <li><a href="forms_elements.html">Forms elements</a></li>
-                    <li><a href="forms_extended.html">Forms extended</a></li>
-                    <li><a href="text_editor.html">Text editor</a></li>
-                    <li><a href="wizard.html">Wizard</a></li>
-                    <li><a href="validation.html">Validation</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="options.html"> <span class="nav-label">Layout options</span></a>
-            </li>
-            <li>
-                <a href="grid_system.html"> <span class="nav-label">Grid system</span></a>
-            </li>
-            <li>
-                <a href="landing_page.html"> <span class="nav-label">Landing page</span></a>
-            </li>
-            <li>
-                <a href="package.html"> <span class="nav-label">Package</span></a>
-            </li> -->
-
-        </ul>
-    </div>
-</aside>
+<% include nav/main %>
 
 <!-- Main Wrapper -->
 <div id="wrapper">
@@ -843,92 +502,4 @@
 
 </div>
 
-
-<!-- Vendor scripts -->
-<script src="../stylesheets/vendor/jquery/dist/jquery.min.js"></script>
-<script src="../stylesheets/vendor/jquery-ui/jquery-ui.min.js"></script>
-<script src="../stylesheets/vendor/slimScroll/jquery.slimscroll.min.js"></script>
-<script src="../stylesheets/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="../stylesheets/vendor/jquery-flot/jquery.flot.js"></script>
-<script src="../stylesheets/vendor/jquery-flot/jquery.flot.resize.js"></script>
-<script src="../stylesheets/vendor/jquery-flot/jquery.flot.pie.js"></script>
-<script src="../stylesheets/vendor/flot.curvedlines/curvedLines.js"></script>
-<script src="../stylesheets/vendor/jquery.flot.spline/index.js"></script>
-<script src="../stylesheets/vendor/metisMenu/dist/metisMenu.min.js"></script>
-<script src="../stylesheets/vendor/iCheck/icheck.min.js"></script>
-<script src="../stylesheets/vendor/peity/jquery.peity.min.js"></script>
-<script src="../stylesheets/vendor/sparkline/index.js"></script>
-
-<!-- App scripts -->
-<script src="../javascripts/homer.js"></script>
-<script src="../javascripts/charts.js"></script>
-
-<script>
-
-    $(function () {
-
-        /**
-         * Flot charts data and options
-         */
-        var data1 = [ [0, 55], [1, 48], [2, 40], [3, 36], [4, 40], [5, 60], [6, 50], [7, 51] ];
-        var data2 = [ [0, 56], [1, 49], [2, 41], [3, 38], [4, 46], [5, 67], [6, 57], [7, 59] ];
-
-        var chartUsersOptions = {
-            series: {
-                splines: {
-                    show: true,
-                    tension: 0.4,
-                    lineWidth: 1,
-                    fill: 0.4
-                },
-            },
-            grid: {
-                tickColor: "#f0f0f0",
-                borderWidth: 1,
-                borderColor: 'f0f0f0',
-                color: '#6a6c6f'
-            },
-            colors: [ "#62cb31", "#efefef"],
-        };
-
-        $.plot($("#flot-line-chart"), [data1, data2], chartUsersOptions);
-
-        /**
-         * Flot charts 2 data and options
-         */
-        var chartIncomeData = [
-            {
-                label: "line",
-                data: [ [1, 10], [2, 26], [3, 16], [4, 36], [5, 32], [6, 51] ]
-            }
-        ];
-
-        var chartIncomeOptions = {
-            series: {
-                lines: {
-                    show: true,
-                    lineWidth: 0,
-                    fill: true,
-                    fillColor: "#64cc34"
-
-                }
-            },
-            colors: ["#62cb31"],
-            grid: {
-                show: false
-            },
-            legend: {
-                show: false
-            }
-        };
-
-        $.plot($("#flot-income-chart"), chartIncomeData, chartIncomeOptions);
-
-
-
-    });
-
-</script>
-
-</body>
-</html>
+<% include partials/footer %>
