--- a/views/projects/edit.ejs
+++ b/views/projects/edit.ejs
@@ -11,7 +11,7 @@
             </div>
             <div class="hpanel">
                 <div class="panel-body">
-                        <form action="/projects/<%=project.id%>/?_method=PUT" id="loginForm" method="POST">
+                        <form action="/projects/<%=project.id%>?_method=PUT" id="loginForm" method="POST">
                             <div class="row">
                             <div class="form-group col-lg-12">
                                 <label>Name</label>
