--- a/views/clients/edit.ejs
+++ b/views/clients/edit.ejs
@@ -1,7 +1,7 @@
 <% include forms/header %>
 
 <div class="back-link">
-    <a href="/users/<%=user.id%>" class="btn btn-primary">Back</a>
+    <a href="/users/<%=user%>" class="btn btn-primary">Back</a>
 </div>
 <div class="register-container">
     <div class="row">
@@ -35,7 +35,7 @@
                             </div>
                             </div>
                             <div class="text-center">
-                                <button class="btn btn-success">Edit Client</button>
+                                <button type="submit" class="btn btn-success">Edit Client</button>
                             </div>
                         </form>
                 </div>
