--- a/views/projects/edit.ejs
+++ b/views/projects/edit.ejs
@@ -1,7 +1,7 @@
 <% include forms/header %>
 
 <div class="back-link">
-    <a href="/users/<%=user.id%>" class="btn btn-primary">Back</a>
+    <a href="/users/<%=user%>" class="btn btn-primary">Back</a>
 </div>
 <div class="register-container">
     <div class="row">
