--- a/views/projects/nav/main.ejs
+++ b/views/projects/nav/main.ejs
@@ -116,11 +116,6 @@
                         <li class="summary"><a href="#">See All Messages</a></li>
                     </ul>
                 </li>
-                <li>
-                    <a href="#" id="sidebar" class="right-sidebar-toggle">
-                        <i class="pe-7s-upload pe-7s-news-paper"></i>
-                    </a>
-                </li>
                 <li class="dropdown">
                     <a href="/auth/logout">
                         <i class="pe-7s-upload pe-rotate-90"></i>
@@ -147,11 +142,11 @@
                         <small class="text-muted"> Admin: <%=user.admin%> <b class="caret"></b></small>
                     </a>
                     <ul class="dropdown-menu animated flipInX m-t-xs">
-                        <li><a href="/users/<%=user.id%>/edit">Profile</a></li>
-                        <li><a href="/projects">Manage Projects</a></li>
-                        <li><a href="/clients">Manage Clients</a></li>
-                        <li class="divider"></li>
-                        <li><a href="/auth/logout">Logout</a></li>
+                      <li><a href="/users/<%=user.id%>/edit">Edit Profile</a></li>
+                      <li><a href="/projects/new">Add Projects</a></li>
+                      <li><a href="/clients/new">Add Clients</a></li>
+                      <li class="divider"></li>
+                      <li><a href="/auth/logout">Logout</a></li>
                     </ul>
                 </div>
 
