cleaned up, projects & client functionaity is there

--- a/views/projects/nav/main.ejs
+++ b/views/projects/nav/main.ejs
@@ -165,7 +165,7 @@
             <li>
                 <a href="/users/<%=user.id%>"> <span class="nav-label">Dashboard</span> </a>
             </li>
-            <li>
+            <li class="active">
                 <a href="/projects"> <span class="nav-label">Projects</span> </a>
             </li>
             <li>
