--- a/views/users/nav/main.ejs
+++ b/views/users/nav/main.ejs
@@ -162,7 +162,7 @@
         </div>
 
         <ul class="nav" id="side-menu">
-            <li>
+            <li class="active">
                 <a href="/users/<%=user.id%>"> <span class="nav-label">Dashboard</span> </a>
             </li>
             <li>
