--- a/views/clients/nav/main.ejs
+++ b/views/clients/nav/main.ejs
@@ -168,7 +168,7 @@
             <li>
                 <a href="/projects"> <span class="nav-label">Projects</span> </a>
             </li>
-            <li>
+            <li class="active">
                 <a href="/clients"> <span class="nav-label">Clients</span> </a>
             </li>
         </ul>
