--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -34,7 +34,7 @@
                                 <input type="password" value="" id="" class="form-control" name="password" required>
                             </div>
                             <div class="form-group col-lg-12">
-                                <label>Avatar Link</label>
+                                <label>Avatar</label>
                                 <input type="" value="<%=user.avatar%>" id="" class="form-control" name="avatar" required>
                             </div>
                             </div>
