--- a/views/clients/home.ejs
+++ b/views/clients/home.ejs
@@ -21,46 +21,31 @@
 </div>
 
 <div class="content animate-panel">
-
-<div class="row">
+  <% clients.forEach(function (client) { %>
     <div class="col-lg-3">
         <div class="hpanel hgreen contact-panel">
             <div class="panel-body">
-                <span class="label label-success pull-right">NEW</span>
-                <img alt="logo" class="img-circle m-b" src="images/profile.jpg">
-                <h3><a href=""> Bradly Danforth </a></h3>
-                <div class="text-muted font-bold m-b-xs">California, LA</div>
+                <span class="label label-success pull-right"><%=client.id%></span>
+                <img alt="logo" class="img-circle m-b" src="<%=client.avatar%>">
+                <h3><a href=""><%=client.first_name%> <%=client.last_name%> </a></h3>
+                <div class="text-muted font-bold m-b-xs"><%=client.email%></div>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt est vitae ultrices accumsan.
+                      <%=client.created_at%>
+                      <%=client.updated_at%>
                 </p>
             </div>
             <div class="panel-footer contact-footer">
                 <div class="row">
-                    <div class="col-md-4 border-right"> <div class="contact-stat"><span>Projects: </span> <strong>200</strong></div> </div>
-                    <div class="col-md-4 border-right"> <div class="contact-stat"><span>Messages: </span> <strong>300</strong></div> </div>
-                    <div class="col-md-4"> <div class="contact-stat"><span>Views: </span> <strong>400</strong></div> </div>
+                    <div class="col-md-4 border-right"> <div class="contact-stat"><span>User_id: </span> <strong><%=client.user_id%> </strong></div> </div>
+                    <div class="col-md-4 border-right"> <div class="contact-stat"><span>Project_id: </span> <strong><%=client.project_id%> </strong></div> </div>
+                    <div class="col-md-4"> <div class="contact-stat"><span>is cool: </span> <strong>True</strong></div> </div>
                 </div>
             </div>
         </div>
     </div>
+<% }) %>
 </div>
-
-    <div class="row">
-    </div>
-    <div class="row">
-    </div>
-    <div class="row">
-    </div>
-
 </div>
-
-    <!-- Footer-->
-    <footer class="footer">
-        <span class="pull-right">
-            The_ReFactory
-        </span>
-        Deloitte @2017
-    </footer>
 
 </div>
 
