--- a/views/projects/partials/header.ejs
+++ b/views/projects/partials/header.ejs
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../../stylesheets/vendor/metisMenu/dist/metisMenu.css" />
     <link rel="stylesheet" href="../../stylesheets/vendor/animate.css/animate.css" />
     <link rel="stylesheet" href="../../stylesheets/vendor/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="../../stylesheets/vendor/jquery-ui/themes/base/all.css" />
 
     <!-- App styles -->
     <link rel="stylesheet" href="../../stylesheets/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css" />
