--- a/views/projects/partials/footer.ejs
+++ b/views/projects/partials/footer.ejs
@@ -12,6 +12,7 @@
 <script src="../../stylesheets/vendor/iCheck/icheck.min.js"></script>
 <script src="../../stylesheets/vendor/peity/jquery.peity.min.js"></script>
 <script src="../../stylesheets/vendor/sparkline/index.js"></script>
+<script src="../../stylesheets/vendor/chartjs/chart.min.js"></script>
 
 <!-- App scripts -->
 <script src="../../javascripts/homer.js"></script>
@@ -19,65 +20,31 @@
 
 <script>
 
-    $(function () {
 
-        /**
-         * Flot charts data and options
-         */
-        var data1 = [ [0, 55], [1, 48], [2, 40], [3, 36], [4, 40], [5, 60], [6, 50], [7, 51] ];
-        var data2 = [ [0, 56], [1, 49], [2, 41], [3, 38], [4, 46], [5, 67], [6, 57], [7, 59] ];
-
-        var chartUsersOptions = {
-            series: {
-                splines: {
-                    show: true,
-                    tension: 0.4,
-                    lineWidth: 1,
-                    fill: 0.4
-                },
-            },
-            grid: {
-                tickColor: "#f0f0f0",
-                borderWidth: 1,
-                borderColor: 'f0f0f0',
-                color: '#6a6c6f'
-            },
-            colors: [ "#62cb31", "#efefef"],
-        };
-
-        $.plot($("#flot-line-chart"), [data1, data2], chartUsersOptions);
-
-        /**
-         * Flot charts 2 data and options
-         */
-        var chartIncomeData = [
-            {
-                label: "line",
-                data: [ [1, 10], [2, 26], [3, 16], [4, 36], [5, 32], [6, 51] ]
-            }
-        ];
-
-        var chartIncomeOptions = {
-            series: {
-                lines: {
-                    show: true,
-                    lineWidth: 0,
-                    fill: true,
-                    fillColor: "#64cc34"
-
+    $(function(){
+        var lineData = {
+            labels: ["January", "February", "March", "April"],
+            datasets: [
+                {
+                    label: "Example dataset",
+                    backgroundColor: "rgba(98,203,49,0.5)",
+                    borderColor: "rgba(98,203,49,0.7)",
+                    pointBackgroundColor: "rgba(98,203,49,1)",
+                    pointBorderColor: "#fff",
+                    pointHoverBackgroundColor: "#fff",
+                    pointHoverBorderColor: "rgba(26,179,148,1)",
+                    data: [17,21,19,24]
                 }
-            },
-            colors: ["#62cb31"],
-            grid: {
-                show: false
-            },
+            ]
+        };
+        var lineOptions = {
+            responsive: true,
             legend: {
-                show: false
+                display: false
             }
         };
-
-        $.plot($("#flot-income-chart"), chartIncomeData, chartIncomeOptions);
-
+        var ctx = document.getElementById("lineOptions").getContext("2d");
+        new Chart(ctx, {type: 'line', data: lineData, options:lineOptions});
 
 
     });
