--- a/views/projects/single.ejs
+++ b/views/projects/single.ejs
@@ -16,13 +16,7 @@
 
                 <div id="hbreadcrumb" class="pull-right m-t-lg">
                     <ol class="hbreadcrumb breadcrumb">
-                        <li><a href="index.html">Dashboard</a></li>
-                        <li>
-                            <span>Tables</span>
-                        </li>
-                        <li class="active">
-                            <span><%=project.name%></span>
-                        </li>
+                        <li><a href="/projects/<%=project.id%>/edit">Edit</a></li>
                     </ol>
                 </div>
                 <h2 class="font-light m-b-xs">
