--- a/views/clients/single.ejs
+++ b/views/clients/single.ejs
@@ -17,6 +17,7 @@
             <div id="hbreadcrumb" class="pull-right m-t-lg">
                 <ol class="hbreadcrumb breadcrumb">
                     <li><a href="/clients/<%=client.id%>/edit">Edit</a></li>
+                    <li><a href="/clients/<%=client.id%>?_method=DELETE" method="POST">Delete</a></li>
                 </ol>
             </div>
             <h2 class="font-light m-b-xs">
