--- a/views/projects/new.ejs
+++ b/views/projects/new.ejs
@@ -3,7 +3,7 @@
 <div class="back-link">
     <a href="/users/<%=user.id%>" class="btn btn-primary">Back</a>
 </div>
-<div class="register-container">
+<div class="register-container animate-panel">
     <div class="row">
         <div class="col-md-12">
             <div class="text-center m-b-md">
@@ -31,7 +31,7 @@
                             </div>
                             </div>
                             <div class="text-center">
-                                <button class="btn btn-success">Create Project</button>
+                              <br><button class="btn btn-success"  data-style="zoom-in">Submit</button>
                             </div>
                         </form>
                 </div>
