--- a/views/projects/single.ejs
+++ b/views/projects/single.ejs
@@ -17,6 +17,7 @@
                 <div id="hbreadcrumb" class="pull-right m-t-lg">
                     <ol class="hbreadcrumb breadcrumb">
                         <li><a href="/projects/<%=project.id%>/edit">Edit</a></li>
+                        <li class= "demo4"><a href="/projects/<%=project.id%>?_method=DELETE" method="POST">Delete</a></li>
                     </ol>
                 </div>
                 <h2 class="font-light m-b-xs">
