delete functionality on clients

--- a/views/clients/partials/footer.ejs
+++ b/views/clients/partials/footer.ejs
@@ -12,12 +12,15 @@
 <script src="../../stylesheets/vendor/iCheck/icheck.min.js"></script>
 <script src="../../stylesheets/vendor/peity/jquery.peity.min.js"></script>
 <script src="../../stylesheets/vendor/sparkline/index.js"></script>
+<script src="../../stylesheets/vendor/sweetalert/lib/sweet-alert.min.js"></script>
+<script src="../../stylesheets/vendor/toastr/build/toastr.min.js"></script>
 
 <!-- App scripts -->
 <script src="../../javascripts/homer.js"></script>
 <script src="../../javascripts/charts.js"></script>
 
 <script>
+
 
     $(function () {
 
