--- a/views/projects/home.ejs
+++ b/views/projects/home.ejs
@@ -15,7 +15,7 @@
             </a>
             <div id="hbreadcrumb" class="pull-right m-t-lg">
                 <ol class="hbreadcrumb breadcrumb">
-                    <li><a href="/projects/new">New</a></li>
+                  <a href="/projects/new"><button class="btn btn-primary2"  data-style="zoom-in">New</button> </a>
                 </ol>
             </div>
             <h2 class="font-light m-b-xs">
