--- a/views/projects/partials/footer.ejs
+++ b/views/projects/partials/footer.ejs
@@ -13,6 +13,8 @@
 <script src="../../stylesheets/vendor/peity/jquery.peity.min.js"></script>
 <script src="../../stylesheets/vendor/sparkline/index.js"></script>
 <script src="../../stylesheets/vendor/chartjs/chart.min.js"></script>
+<script src="../../stylesheets/vendor/sweetalert/lib/sweet-alert.min.js"></script>
+<script src="../../stylesheets/vendor/toastr/build/toastr.min.js"></script>
 
 <!-- App scripts -->
 <script src="../../javascripts/homer.js"></script>
