--- a/views/clients/home.ejs
+++ b/views/clients/home.ejs
@@ -15,7 +15,7 @@
             </a>
             <div id="hbreadcrumb" class="pull-right m-t-lg">
                 <ol class="hbreadcrumb breadcrumb">
-                    <li><a href="/clients/new">New</a></li>
+                  <a href="/clients/new"><button class="btn btn-primary2"  data-style="zoom-in">New</button> </a>
                 </ol>
             </div>
             <h2 class="font-light m-b-xs">
@@ -28,11 +28,12 @@
 <div class="content animate-panel">
   <% clients.forEach(function (client) { %>
     <div class="col-lg-3">
+      <a href="/clients/<%=client.id%>">
         <div class="hpanel hgreen contact-panel">
             <div class="panel-body">
                 <span class="label label-success pull-right"><%=client.id%></span>
                 <img alt="logo" class="img-circle m-b" src="<%=client.avatar%>">
-                <h3><a href="/clients/<%=client.id%>"><%=client.first_name%> <%=client.last_name%> </a></h3>
+                <h3><%=client.first_name%> <%=client.last_name%></h3>
                 <div class="text-muted font-bold m-b-xs"><%=client.email%></div>
                 <p>
                       <%=client.created_at%>
@@ -47,6 +48,7 @@
                 </div>
             </div>
         </div>
+      </a>
     </div>
 <% }) %>
 </div>
