--- a/views/projects/partials/header.ejs
+++ b/views/projects/partials/header.ejs
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="../../stylesheets/vendor/animate.css/animate.css" />
     <link rel="stylesheet" href="../../stylesheets/vendor/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="../../stylesheets/vendor/jquery-ui/themes/base/all.css" />
+    <link rel="stylesheet" href="../../stylesheets/vendor/sweetalert/lib/sweet-alert.css" />
+    <link rel="stylesheet" href="../../stylesheets/vendor/toastr/build/toastr.min.css" />
 
     <!-- App styles -->
     <link rel="stylesheet" href="../../stylesheets/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css" />
